--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.10.13",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "request": "^2.88.2",
     "uuid": "^8.3.1"
   }
 }
