--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "@uiw/react-codemirror": "^3.0.1",
     "axios": "^0.21.0",
     "react": "^17.0.1",
-    "react-codemirror": "^1.0.0",
+    "react-card-flip": "^1.0.11",
     "react-dom": "^17.0.1",
     "react-highlight": "^0.12.0",
     "react-router-dom": "^5.2.0",
