--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "javaproject",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -12,7 +13,7 @@
     "@uiw/react-codemirror": "^3.0.1",
     "axios": "^0.21.0",
     "react": "^17.0.1",
-    "react-codemirror": "^1.0.0",
+    "react-card-flip": "^1.0.11",
     "react-dom": "^17.0.1",
     "react-highlight": "^0.12.0",
     "react-router-dom": "^5.2.0",
