--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@uiw/react-codemirror": "^3.0.1",
+    "ace-builds": "^1.4.12",
     "axios": "^0.21.0",
     "monaco-editor-webpack-plugin": "^2.0.0",
     "react": "^17.0.1",
+    "react-ace": "^9.2.0",
     "react-card-flip": "^1.0.11",
     "react-dom": "^17.0.1",
-
     "react-monaco-editor": "^0.40.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
