--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.10.13",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "socket.io": "^3.0.3",
     "uuid": "^8.3.1"
   }
 }
