--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.0",
     "react-string-replace": "^0.4.4",
     "recharts": "^1.8.5",
+    "socket.io-client": "^3.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
