--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-ace": "^9.2.0",
     "react-card-flip": "^1.0.11",
     "react-copy-to-clipboard": "^5.0.2",
+    "react-countdown": "^2.3.1",
     "react-dom": "^17.0.1",
     "react-monaco-editor": "^0.40.0",
     "react-router-dom": "^5.2.0",
